fix: accept metrics as query params when querying best benchmark run
